--- a/Old-Record-Store/Old-Record-Store.WebApp/Views/Home/Index.cshtml
+++ b/Old-Record-Store/Old-Record-Store.WebApp/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<head>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+        .bg {
+            /* The image used */
+            background-image: url("https://i.imgur.com/JhzFV.jpg");
+            /* Full height */
+            height: 100%;
+            /* Center and scale the image nicely */
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+    </style>
+</head>
+
+   
+    <body class="bg">
+       
+
+
+        <p></p>
+    </body>
+
