--- a/Old-Record-Store/Old-Record-Store.WebApp/Views/Home/Index.cshtml
+++ b/Old-Record-Store/Old-Record-Store.WebApp/Views/Home/Index.cshtml
@@ -20,12 +20,27 @@
         }
     </style>
 </head>
+<body class="bg">
 
-   
-    <body class="bg">
-       
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
+    <h1><center><font color="White"><strong>Welcome to the Soft Machine Record System</strong></font></center></h1>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <h2><center><font color="white"><strong>We hope you enjoy your experience, and yes, we cannot handle refunds</strong></font></center></h2>
 
-        <p></p>
-    </body>
+    <p></p>
+</body>
 
