--- a/Old-Record-Store/Old-Record-Store.WebApp/Views/Customer/getCustomerOrderHistory.cshtml
+++ b/Old-Record-Store/Old-Record-Store.WebApp/Views/Customer/getCustomerOrderHistory.cshtml
@@ -5,48 +5,53 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>getCustomerOrderHistory</h1>
+<head>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+        }
+    </style>
+</head>
+
+<h1>Customer List</h1>
 
 <div>
-    <h4>OrderViewModel</h4>
     <hr />
     <dl class="row">
-        @foreach (var item in Model)
-        {
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model =>  item.OrderId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model =>  item.Date)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.OrderTotal)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model =>  item.OrderTotal)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model =>  item.CustomerId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LocationId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model =>  item.LocationId)
-        </dd>
-        }
     </dl>
 </div>
-<div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
-</div>
+<table>
+    <thead>
+    <th>Order I.D</th>
+    <th>Date</th>
+    <th>Customer I.D</th>
+    <th>Location I.D</th>
+
+    </thead>
+
+
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td class="col-sm-10">
+                @Html.DisplayFor(model => item.OrderId)
+            </td>
+
+            <td class="col-sm-10">
+                @Html.DisplayFor(model => item.Date)
+            </td>
+
+            <td class="col-sm-10">
+                @Html.DisplayFor(model => item.CustomerId)
+            </td>
+
+            <td class="col-sm-10">
+                @Html.DisplayFor(model => item.LocationId)
+            </td>
+        </tr>
+    }
+    </dl>
+    </div>
+    <div>
+        <a asp-action="Index" asp-controller="Home">Back to Home</a>
+    </div>
