added dockerfile, dockignore, and testing pipleline

--- a/Old-Record-Store/Old-Record-Store.WebApp/Views/Home/Index.cshtml
+++ b/Old-Record-Store/Old-Record-Store.WebApp/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
     <br />
     <br />
     <br />
-
+    <h1>dood what is this</h1>
     <h1><center><font color="White"><strong>Welcome to the Soft Machine Record System</strong></font></center></h1>
     <br />
     <br />
